--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Dar`s Portfolio</h1>
     <h2>I`m a Web Tester</h2>
     <hr/>
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
-    <img src="../Screenshot 2024-01-16 112258.png" height="280" alt="Movie Rank Screenshot"/>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/movie-ranking.png" height="280" alt="Movie Rank Screenshot"/>
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="../Screenshot 2024-01-16 112347.png" height="400" alt="Birthday Cake"/>
+    <img src="./assets/images/birthday-invite.png" height="400" alt="Birthday Cake"/>
 <hr/>
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
